# live-image-resizer

./: .gitignore  pyproject.toml  resize-image.py
server/: database_manager.py  main.py
server/api/: routes.py
server/database/: database_manager.py
server/utils/: decorators.py  exceptions.py  logger_setup.py
telegram-bot/: main.py
watcher/: main.py
